--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 auto-save-list
 backups
 *~
+*#
+projects
+persp-confs
+projects
+ltximg
 .places
 session.*
 tramp
@@ -12,6 +17,7 @@ site-lisp/adventur-mode
 .DS_Store
 .yas-compiled-snippets.el
 .cask
+straight
 /url/
 /var/
 /.sx/
@@ -26,4 +32,5 @@ site-lisp/adventur-mode
 /forge-database.sqlite
 /smex-items
 
+nohup.out
 config.el
